--- a/main.css
+++ b/main.css
@@ -3,15 +3,17 @@
     height: 6rem;
     border-radius: 1rem;
     font-size: 0.8rem;
-    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    box-shadow: var(--shadow-1);
     padding: var(--offset-xs);
     animation-iteration-count: infinite;
     animation-duration: 1.4s;
     word-break: break-all;
     animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
-    background-color: white;
+    background-color: var(--background-1);
+    user-select: none;
     p {
         width: 100%;
+        line-clamp: 2;
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
