--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@
     animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
     background-color: var(--background-1);
     user-select: none;
+    -webkit-user-select: none;
     p {
         width: 100%;
         line-clamp: 2;
